# project-echo

./: .gitignore  1.session  countries.json  gui.py  main.kv  main.py  pyproject.toml  requirements.txt  worker.py
.idx/: dev.nix
project_echo/: app.py  config.py  web_server.py
project_echo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project_echo/screens/: accounts_screen.kv  accounts_screen.py  campaigns_screen.kv  campaigns_screen.py  code_verification_screen.kv  code_verification_screen.py  login_screen.kv  login_screen.py  password_verification_screen.kv  password_verification_screen.py
project_echo/services/: country_service.py  telegram_service.py
project_echo/static/: app.js  style.css
project_echo/templates/: index.html
project_echo/views/: account_view.py  ad_cabinet_view.py
