[project]
name = "project-echo"
version = "0.1.0"
description = "Telegram management and advertising tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "telethon>=1.34.0"
]

[tool.briefcase]
project_name = "Project Echo"
bundle = "org.beeware"
version = "0.1.0"
formal_name = "Project Echo"